--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -246,6 +246,10 @@ a {
   zoom:1;
 }
 
+section.chapter{
+    border-bottom: 1px dashed #b5e853;
+}
+
 section.chapter p, section.chapter li{
     text-align: justify;
 }
@@ -263,5 +267,12 @@ strong.blue{
 }
 
 div.syntaxhighlighter {
-    margin: 1.5em 0!important;
+    margin: 1.5em 0;
+}
+
+div.syntaxhighlighter:hover{
+    -moz-box-shadow:  0px 0px 10px 3px rgba(181, 232, 83, 0.3);
+    -webkit-box-shadow:  0px 0px 10px 3px rgba(181, 232, 83, 0.3);
+    box-shadow:  0px 0px 10px 3px rgba(181, 232, 83, 0.3);
+    border: 1px solid rgba(181, 232, 83, 0.8);
 }
