--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -276,3 +276,19 @@ div.syntaxhighlighter:hover{
     box-shadow:  0px 0px 10px 3px rgba(181, 232, 83, 0.3);
     border: 1px solid rgba(181, 232, 83, 0.8);
 }
+
+code.term:before{
+    content: "`";
+}
+code.term:after{
+    content: "`";
+}
+
+code.term{
+    font-family: monospace;
+    font-size: 1.4em;
+}
+
+p[id^="area"]{
+    color: #FF8080;;
+}
